made some accessibility changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <section class="card">
+  <main class="card">
     <div class="card-content">
       <div class="card-body">
         <h1 class="card-title">Get <span class="purple">insights</span> that help your business grow.</h1>
@@ -22,15 +22,15 @@
         </p>
         <div class="stats">
           <div class="stats-item">
-            <h3 class="stats-number">10k+</h3>
+            <h2 class="stats-number">10k+</h2>
             <p class="stats-name">companies</p>
           </div>
           <div class="stats-item">
-            <h3 class="stats-number">314</h3>
+            <h2 class="stats-number">314</h2>
             <p class="stats-name">templates</p>
           </div>
           <div class="stats-item">
-            <h3 class="stats-number">12m+</h3>
+            <h2 class="stats-number">12m+</h2>
             <p class="stats-name">queries</p>
           </div>
         </div>
@@ -42,7 +42,7 @@
         <img src="./images/image-header-mobile.jpg" alt="">
       </picture>
     </div>
-  </section>
+  </main>
 
 </body>
 
